Fix footer overflow styling on mobile

--- a/src/app/popup/popup.component.css
+++ b/src/app/popup/popup.component.css
@@ -41,6 +41,10 @@
 }
 
 @media (max-width: 768px) {
+  .popup-holder {
+    padding-bottom: 70px;
+  }
+  
   .description-holder .title {
     font-size: 16px;
   }
